@startuml Diagrama Entidade Relacionamento
skinparam linetype ortho
skinparam handwritten false
hide circle
hide empty members

title Diagrama de Entidade-Relacionamento

entity Usuario {
  * id : Long
  --
  email : String
  senha : String
  role : String
}

entity Aluno {
  * id : Long
  --
  ra : String
  nome : String
  moedas : int
}

entity Professor {
  * id : Long
  --
  nome : String
  disciplina : String
}

entity Empresa {
  * id : Long
  --
  cnpj : String
  razaoSocial : String
  nomeFantasia : String
}

entity Vantagem {
  * id : Long
  --
  nome : String
  descricao : String
  custoEmMoedas : int
  vendida : boolean
  imageUrl : String
  --
  empresa_id : Long <<FK>>
  aluno_comprador_id : Long <<FK>>
}

entity Transacao {
  * id : Long
  --
  valor : int
  data : LocalDate
  tipo : String
  --
  aluno_id : Long <<FK>>
  professor_id : Long <<FK>>
}

' Relacionamentos de Herança/Especialização (representado como 1-1 se houver uma tabela para cada subtipo)
Usuario ||--o{ Aluno : "1" "1" é Aluno
Usuario ||--o{ Professor : "1" "1" é Professor
Usuario ||--o{ Empresa : "1" "1" é Empresa

' Relacionamentos de Associação
Empresa ||--o{ Vantagem : "1" "N" possui >
Vantagem }o--|| Aluno : "N" "0..1" comprada por

Aluno ||--o{ Transacao : "1" "N" gera/recebe >
Professor ||--o{ Transacao : "1" "N" envia >

@enduml
